--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rentify</title>
+    <title>Rentify - Rent Home, Apartment, Villas and many more</title>
     <link rel="icon" href="/assets/rentifyLogo.png">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/rating.css">
