--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,7 @@ body {
     /* remove forced offset */
     margin-right: 0 !important;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     /* center horizontally */
     align-items: center;
     flex: 6;
@@ -62,10 +62,13 @@ body {
 
 .search-input {
     border-radius: 25px !important;
-    padding: 0.5rem 3rem !important;
+    padding: 0.5rem 2rem !important;
     font-size: 1rem !important;
     width: 250px !important;
     /* default desktop size */
+}
+.explore-btn{
+    font-size: 1.5rem !important;
 }
 
 /* 🔽 Mobile adjustments */
@@ -161,6 +164,8 @@ body {
     #filters {
         overflow-x: auto;
         flex-wrap: nowrap;
+        margin-left: 0;
+        margin-right: 0;
     }
     .tax-toggle{
         width: 100%;
@@ -290,6 +295,30 @@ body {
 .fa-trash-can:hover {
     color: rgb(82, 3, 3);
 }
+
+/* reviews */
+.reviews-wrapper {
+  margin-bottom: 1rem;
+}
+
+.review-card {
+  width: 280px;
+  flex: 0 0 auto;
+}
+
+.reviews-wrapper::-webkit-scrollbar {
+  height: 8px;
+}
+
+.reviews-wrapper::-webkit-scrollbar-thumb {
+  background: #aaa;
+  border-radius: 4px;
+}
+
+.reviews-wrapper::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
 
 /* MAP */
 #map {
