--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate") %>
 
-    <div id="filters" class="">
+    <div id="filters" class="offset-1">
         <div class="filter">
             <div><i class="fa-solid fa-fire"></i></div>
             <p>Trending</p>
@@ -56,18 +56,3 @@
             </a>
         <% } %>
     </div>
-
-    <script>
-        let taxSwitch = document.getElementById("switchCheckDefault");
-        taxSwitch.addEventListener("click", () => {
-            let taxInfo = document.getElementsByClassName("tax-info")
-            
-            for(info of taxInfo){
-                if(info.style.display != "inline"){
-                    info.style.display = "inline";
-                }else{
-                    info.style.display = "none";
-                }  
-            }
-        });
-    </script>
