--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,16 +1,16 @@
 <% layout("/layouts/boilerplate") %>
 <div class="row mt-3 mb-4">
-  <div class="col-6 offset-3 mb-2">
-    <h3><%= listing.title %></h3>
+  <div class="col-12 col-md-6 offset-md-3 mb-2 listing-title text-center">
+    <h3 class="fs-4 fs-md-3 fs-lg-2"><%= listing.title %></h3>
   </div>
 
-  <div class="card col-6 offset-3 show-card listing-card">
+  <div class="card col-12 col-md-6 offset-md-3 px-2 my-2 show-card listing-card">
     <img src="<%= listing.image.url %>" class="card-img-top show-img mb-2" alt="listing_image">
     <div class="card-body">
       <p class="card-text"><i><%= listing.description %></i></p>
       <p class="card-text">
         <i class="fa-solid fa-indian-rupee-sign"></i>
-        <%= listing.price.toLocaleString("en-IN") %> / Night
+        <%= listing.price.toLocaleString("en-IN") %> / Night <i class="tax-info">+ 18% GST</i>
       </p>
       <p class="card-text">
         <i class="fa-solid fa-location-dot" style="color: #ff4545;"></i>
@@ -24,83 +24,133 @@
     </div>
   </div>
 
-  <% if (currUser && currUser._id.equals(listing.owner._id)) { %>
-    <div class="btns">
-      <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
-      <form action="/listings/<%= listing._id %>?_method=DELETE" method="POST">
-        <button class="btn btn-dark offset-3">Delete</button>
+<% if (currUser && currUser._id.equals(listing.owner._id)) { %>
+  <div class="col-12 col-md-6 offset-md-3 my-3">
+    <div class="d-flex gap-3">
+      <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark edit-btn flex-fill">Edit Listing</a>
+      <form action="/listings/<%= listing._id %>?_method=DELETE" method="POST" class="flex-fill">
+        <button class="btn btn-dark w-100">Delete Listing</button>
       </form>
-    </div>
-  <% } %>
-
-  <!-- MAP  -->
-   <div class="col-6 offset-3 mb-3 mt-3">
-    <h4>Where you'll be</h4>
-      <div id="map"></div>
-   </div>
-
-  <div class="col-6 offset-3 mb-3 mt-3">
-    <% if (currUser) { %>
-      <h4>Write a Review</h4>
-      <form action="/listings/<%= listing._id %>/review" method="POST" novalidate class="needs-validation">
-
-
-        <div class="mb-3">
-            <label for="rating" class="form-label">Rating</label>
-            <fieldset class="starability-slot">
-            <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
-            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-            <label for="first-rate1" title="Terrible">1 star</label>
-            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-            <label for="first-rate2" title="Not good">2 stars</label>
-            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-            <label for="first-rate3" title="Average">3 stars</label>
-            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-            <label for="first-rate4" title="Very good">4 stars</label>
-            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-            <label for="first-rate5" title="Amazing">5 stars</label>
-            </fieldset>
-        </div>
-
-        <div class="mb-3">
-          <label for="comment" class="form-label">Comment</label>
-          <textarea name="review[comment]" id="content" rows="6" cols="30" class="form-control" required></textarea>
-          <div class="invalid-feedback">Add some comments for review</div>
-        </div>
-
-        <button class="btn btn-dark edit-btn">Submit</button>
-      </form>
-    <% } %>
-
-    <hr>
-
-    <h4>All Reviews</h4>
-    <div class="row">
-      <% for (review of listing.reviews) { %>
-        <div class="card col-5 ms-3 mb-3">
-          <div class="card-body">
-            <div class="d-flex align-items-start justify-content-between mt-2">
-              <h6 class="card-title">
-                <i class="fa-jelly-duo fa-regular fa-user"></i>
-                <%= review.author.username %>
-              </h6>
-
-              <% if (currUser && review.author._id.equals(currUser._id)) { %>
-                <form action="/listings/<%= listing._id %>/review/<%= review._id %>?_method=DELETE" method="POST">
-                  <button class="btn btn-sm text-danger fa-trash-can">
-                    <i class="fa-solid fa-trash-can"></i>
-                  </button>
-                </form>
-              <% } %>
-            </div>
-
-            <p class="starability-result" data-rating="<%= review.rating %>"></p>
-            <p class="card-text mb-2"><%= review.comment %></p>            
-          </div>
-        </div>
-      <% } %>
     </div>
   </div>
+<% } %>
+
+<div class="col-12 col-md-6 offset-md-3 mb-3 mt-3">
+  <% if (currUser) { %>
+    <h4>Write a Review</h4>
+    <form action="/listings/<%= listing._id %>/review" method="POST" novalidate class="needs-validation">
+
+      <div class="mb-3">
+        <label for="rating" class="form-label">Rating</label>
+        <fieldset class="starability-slot">
+          <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+          <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
+      </div>
+
+      <div class="mb-3">
+        <label for="comment" class="form-label">Comment</label>
+        <textarea name="review[comment]" id="content" rows="6" class="form-control" required></textarea>
+        <div class="invalid-feedback">Add some comments for review</div>
+      </div>
+
+      <button class="btn btn-dark edit-btn w-100">Submit Review</button>
+    </form>
+  <% } %>
+
+  <hr>
+
+<h4>All Reviews</h4>
+<div class="reviews-wrapper">
+  <div class="d-flex flex-row flex-nowrap overflow-auto">
+    <% for (review of listing.reviews.slice(0,4)) { %>
+      <div class="card review-card me-3 flex-shrink-0">
+        <div class="card-body">
+          <div class="d-flex align-items-start justify-content-between mt-2">
+            <h6 class="card-title">
+              <i class="fa-regular fa-user"></i>
+              <%= review.author.username %>
+            </h6>
+
+            <% if (currUser && review.author._id.equals(currUser._id)) { %>
+              <form action="/listings/<%= listing._id %>/review/<%= review._id %>?_method=DELETE" method="POST">
+                <button class="btn btn-sm text-danger">
+                  <i class="fa-solid fa-trash-can"></i>
+                </button>
+              </form>
+            <% } %>
+          </div>
+
+          <p class="starability-result " data-rating="<%= review.rating %>"></p>
+          <p class="card-text mb-2"><%= review.comment %></p>            
+        </div>
+      </div>
+    <% } %>
+  </div>
+</div>
+
+<div class="modal fade" id="allReviewsModal" tabindex="-1" aria-labelledby="allReviewsModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="allReviewsModalLabel">All Reviews</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <% for (review of listing.reviews) { %>
+          <div class="card mb-3">
+            <div class="card-body">
+              <div class="d-flex align-items-start justify-content-between mt-2">
+                <h6 class="card-title">
+                  <i class="fa-regular fa-user"></i>
+                  <%= review.author.username %>
+                </h6>
+
+                <% if (currUser && review.author._id.equals(currUser._id)) { %>
+                  <form action="/listings/<%= listing._id %>/review/<%= review._id %>?_method=DELETE" method="POST">
+                    <button class="btn btn-sm text-danger">
+                      <i class="fa-solid fa-trash-can"></i>
+                    </button>
+                  </form>
+                <% } %>
+              </div>
+
+              <p class="starability-result" data-rating="<%= review.rating %>"></p>
+              <p class="card-text mb-2"><%= review.comment %></p>            
+            </div>
+          </div>
+        <% } %>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- Show All Reviews Button -->
+<% if (listing.reviews.length > 4) { %>
+  <button class="btn btn-outline-dark mt-2" data-bs-toggle="modal" data-bs-target="#allReviewsModal">
+    Show All Reviews
+  </button>
+<% } %>
+
+</div>
+
+<!-- MAP -->
+<div class="col-12 col-md-6 offset-md-3 mb-3 mt-3">
+  <h4>Where you'll be</h4>
+  <div id="map"></div>
+</div>
+
+
 </div>
 
   <script>
