--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -7,9 +7,9 @@
 
       <div class="mb-3">
         <label for="username" class="form-label">Username:</label>
-          <input type="text" name="username" class="form-control" placeholder="Enter Username" required>
+          <input type="text" name="username" class="form-control" placeholder="Enter Username" minlength="5">
           <div class="valid-feedback">Accepted</div>
-          <div class="invalid-feedback">Username should be valid!</div>
+          <div class="invalid-feedback">Username should be valid/greater than or equal to 5 characters!</div>
       </div>
       <div class="mb-3">
         <label for="email" class="form-label">Email:</label>
@@ -19,7 +19,7 @@
       </div>
       <div class="mb-3">
         <label for="password" class="form-label">Password:</label>
-          <input type="password" name="password" class="form-control" placeholder="Enter Password" required>
+          <input type="password" name="password" class="form-control" placeholder="Enter Minimum 8 Characters" minlength="8" required>
           <div class="valid-feedback">Accepted</div>
           <div class="invalid-feedback">Password should be valid!</div>
       </div>
@@ -27,6 +27,5 @@
       <button class="btn btn-success">SignUP</button>
       
     </form>
-
   </div>
 </div>
