slightly change in navbar:

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -30,7 +30,7 @@
               <label class="form-check-label" for="switchCheckDefault">Display total after tax</label>
           </div>
        </div>
-        <a class="nav-link" href="/listings/new"><i class="fa-solid fa-upload me-2"></i>Host Your House</a>
+        <a class="nav-link" href="/listings/new"><i class="fa-solid fa-upload me-2"></i>Rentify Your House</a>
         <% if(!currUser) { %>
           <a class="nav-link" href="/signup"><b>Signup</b></a>
           <a class="nav-link" href="/login"><b>Login</b></a>
