--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,12 @@
 <% layout("/layouts/boilerplate") %>
+
+<div class="tax-toggle">
+  <div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
+    <label class="form-check-label" for="switchCheckDefault">Display total after tax</label>
+  </div>
+</div>
+
   <div class="row mt-3 mb-4">
     <div class="col-12 col-md-6 offset-md-3 mb-2 listing-title text-center">
       <h3 class="fs-4 fs-md-3 fs-lg-2">
