Modified UI and Backend

--- a/public/css/featuresSection.css
+++ b/public/css/featuresSection.css
@@ -40,10 +40,10 @@
     font-size: 1.5rem;
 }
 .feature-icon .fa-bolt{
-  color: #ffe600;
+  color: #ad9c02;
 }
 .feature-icon .fa-shield-alt{
-  color: #09ff00;
+  color: #078b02;
 }
 .feature-icon .fa-certificate{
   color: #5c77ff;
