--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,13 +1,9 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
-    <!-- Brand -->
-    <div class="brand-explore">
-    <a class="navbar-brand" href="/listings">
-      <i>
-      <img src="/assets/rentifyLogo.png" alt="logo" height="64px" width="150px">
-      </i>
-    </a>
-    </div>
+    <!-- Logo -->
+      <a class="navbar-brand" href="/listings">
+        <img src="/assets/rentifylogo2.png" alt="logo" height="200px" width="200px">
+      </a>
 
     <!-- Hamburger toggler -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
@@ -16,22 +12,32 @@
 
     <!-- Collapsible links -->
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-  <div class="navbar-nav text-end">
+    <div class="navbar-nav text-end">
+    <a class="nav-link home-btn" href="/listings">Home</a>
     <% if(!currUser) { %>
-      <a class="nav-link" href="/signup"><b>Signup</b></a>
-      <a class="nav-link" href="/login"><b>Login</b></a>
+      <a class="nav-link signup-btn" href="/signup">Signup</a>
+      <a class="nav-link login-btn" href="/login">Login</a>
     <% } %>
     <% if(currUser){ %>
       <p class="nav-link">Welcome, <%= currUser.username %></p>
 
       <!-- Desktop view user circle with tooltip -->
-      <div class="nav-link user-ch d-none d-md-block">
-        <a href="/profile"><%= currUser.username[0].toUpperCase() %></a>
+      <% if(!currUser.profileImage){ %>
+        <div class="nav-link user-ch d-none d-md-block">
+        <a href="/profile/<%= currUser._id  %>"><%= currUser.username[0].toUpperCase() %></a>
         <span class="tooltip-text">My Profile</span>
       </div>
+      <% }else{ %>
+        <div class="nav-link user-ch d-none d-md-block">
+          <a href="/profile/<%= currUser._id %>"><img src="<%= currUser.profileImage %>"></a>
+          
+          <span class="tooltip-text">My Profile</span>
+        </div>
+      <% } %>
+      
 
       <!-- Mobile view 'My Profile' link -->
-      <a href="/profile" class="nav-link mobile-profile d-md-none">My Profile</a>
+      <a href="/profile/<%= currUser._id  %>" class="nav-link mobile-profile d-md-none">My Profile</a>
 
       <a class="nav-link logout d-md-block" href="/logout">Logout</a>
     <% } %>
