--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -131,7 +131,7 @@
         <div class="card listing-card">
           <!-- Wishlist Heart -->
           <div class="wishlist">
-            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-heart wishlist-icon" data-listing-id="<%= listing._id %>"></i>
           </div>
           <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_img">
           <div class="card-img-overlay"></div>
