--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,14 +1,33 @@
-<footer>
-    <div class="f-info">
-        <div class="f-info-socials">
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+<body>
+
+    <footer class="footer mt-auto">
+        <div class="container">
+            <div class="row align-items-center mb-4">
+                <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+                    <h4 class="fw-bold">RENTIFY</h4>
+                </div>
+                <div class="col-md-8">
+                    <ul class="nav justify-content-center justify-content-md-end">
+                        <li class="nav-item"><a class="nav-link px-2" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link px-2" href="#">List Layout</a></li>
+                        <li class="nav-item"><a class="nav-link px-2" href="#">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link px-2" href="#">Customer Support</a></li>
+                        <li class="nav-item"><a class="nav-link px-2" href="#">Services</a></li>
+                        <li class="nav-item"><a class="nav-link px-2" href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr style="border-color: #444;">
+            <div class="row align-items-center footer-bottom">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    <small>&copy; Copyright. All rights reserved.</small>
+                </div>
+                <div class="col-md-6 text-center text-md-end social-icons d-flex justify-content-center justify-content-md-end">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
         </div>
-        <div>&copy; Rentify Private Limited</div>
-        <div class="f-info-links">
-            <a href="/privacy">Privacy</a>
-            <a href="/terms">Terms</a>
-        </div>
-    </div>
-</footer>
+    </footer>
