--- a/views/listings/listings.ejs
+++ b/views/listings/listings.ejs
@@ -25,7 +25,7 @@
               <i class="fa-solid fa-location-dot"></i>
               <%= listing.location %>, <%= listing.country %>
             </p>
-            <p><b>&#x20B9;<%= listing.price.toLocaleString("en-IN") %> </b>/ Night</p>
+            <p><b>&#x20B9;<%= listing.price.toLocaleString("en-IN") %> </b>/ Day</p>
           </div>
         </div>
       </a>
