--- a/views/partials/myBookings.ejs
+++ b/views/partials/myBookings.ejs
@@ -26,7 +26,7 @@
                   <i class="fa-solid fa-location-dot"></i> <%= item.location %>, <%= item.country %>
                 </p>
                 <p class="card-text mb-2">
-                  <b>&#x20B9;<%= item.price.toLocaleString("en-IN") %></b> / Night
+                  <b>&#x20B9;<%= item.price.toLocaleString("en-IN") %></b> / Day
                 </p>
                 <hr>
                 <h6>Booking Details:</h6>
