--- a/views/partials/myListings.ejs
+++ b/views/partials/myListings.ejs
@@ -33,7 +33,7 @@
         <div class="listing-details">
           <h5 class="listing-title"><%= listing.title %></h5>
           <p class="listing-location"><i class="fa-solid fa-location-dot"></i> <%= listing.location %>, <%= listing.country %></p>
-          <p class="listing-price"><b>&#x20B9;<%= listing.price.toLocaleString("en-IN") %></b> / Night</p>
+          <p class="listing-price"><b>&#x20B9;<%= listing.price.toLocaleString("en-IN") %></b> / Day</p>
         </div>
 
       </a>
