--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rentify - Rent Home, Apartment, Rooms and many more</title>
-    <link rel="icon" href="/assets/rentifyLogo.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="public\assets\rentifylogo2.png" sizes="32x32" type="image/png">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/rating.css">
     <link rel="stylesheet" href="/css/featuresSection.css">
